--- a/app/achievements/achievements.module.css
+++ b/app/achievements/achievements.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center; */
-  padding: 3rem 10rem 0rem 10rem;
+  padding: 9rem 10rem 0rem 10rem;
 }
 
 .timeline {
