--- a/app/rockets/rockets.module.css
+++ b/app/rockets/rockets.module.css
@@ -1,5 +1,5 @@
 .page {
-  padding: 2rem 10rem 3rem 10rem;
+  padding: 8rem 10rem 3rem 10rem;
   background-color: white;
   color: black;
 }
