--- a/app/sponsors/sponsors.module.css
+++ b/app/sponsors/sponsors.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem 2rem;
+  padding: 10rem 2rem 4rem 2rem;
   width: 100vw;
 }
 
